# algo3-tp2

./: .gitignore  2opt.cpp  CMakeLists.txt  GolosoAristas.cpp  Insercion.cpp  Makefile  Makefile.save  README.md  TSP  TSP_AGM  TSP_GA  TSP_INS  funciones.h  heurAGM.cpp  main  main.cpp  unir_find.hpp
Python/: Analisis.ipynb  experimentos.ipynb  generar-instancias.ipynb
Python/.ipynb_checkpoints/: Analisis-checkpoint.ipynb  experimentos-checkpoint.ipynb  generar-instancias-checkpoint.ipynb
Python/instancias/: medidas-tabu-ciclos-lion
Python/instancias/descargas/: 0_descargar_instancias_de_prueba.sh  1_parsear_instancias.sh  indice.csv  pesos_optimos.txt
Python/instancias/descargas/data/: a280.tsp  ali535.tsp  att48.tsp  att532.tsp  bayg29.tsp  bays29.tsp  berlin52.tsp  bier127.tsp  burma14.tsp  ch130.tsp  ch150.tsp  d198.tsp  d493.tsp  d657.tsp  dantzig42.tsp  eil101.tsp  eil51.tsp  eil76.tsp  fl417.tsp  gil262.tsp  gr120.tsp  gr137.tsp  gr202.tsp  gr229.tsp  gr431.tsp  gr666.tsp  gr96.tsp  kroA100.tsp  kroA150.tsp  kroA200.tsp  kroB100.tsp  kroB150.tsp  kroB200.tsp  kroC100.tsp  kroD100.tsp  kroE100.tsp  lin105.tsp  lin318.tsp  linhp318.tsp  p654.tsp  (+26 more)
Python/instancias/descargas/scripts/: descargar_instancias.py  parser_instancias_con_espejadas_ceros.py  parser_instancias_con_espejadas_unos.py  parser_instancias_sin_espejadas_ceros.py  parser_instancias_sin_espejadas_unos.py
Python/instancias/grafo-euleriano/: E-10.txt  E-100.txt  E-101.txt  E-102.txt  E-105.txt  E-108.txt  E-11.txt  E-111.txt  E-114.txt  E-117.txt  E-12.txt  E-120.txt  E-123.txt  E-126.txt  E-129.txt  E-13.txt  E-132.txt  E-135.txt  E-138.txt  E-14.txt  E-141.txt  E-144.txt  E-147.txt  E-15.txt  E-150.txt  E-153.txt  E-156.txt  E-159.txt  E-16.txt  E-162.txt  E-165.txt  E-168.txt  E-17.txt  E-171.txt  E-174.txt  E-177.txt  E-18.txt  E-180.txt  E-183.txt  E-186.txt  (+129 more)
Python/instancias/grafo-propio/: G-10.txt  G-100.txt  G-101.txt  G-102.txt  G-11.txt  G-12.txt  G-13.txt  G-14.txt  G-15.txt  G-16.txt  G-17.txt  G-18.txt  G-19.txt  G-20.txt  G-21.txt  G-22.txt  G-23.txt  G-24.txt  G-25.txt  G-26.txt  G-27.txt  G-28.txt  G-29.txt  G-3.txt  G-30.txt  G-31.txt  G-32.txt  G-33.txt  G-34.txt  G-35.txt  G-36.txt  G-37.txt  G-38.txt  G-39.txt  G-4.txt  G-40.txt  G-41.txt  G-42.txt  G-43.txt  G-44.txt  (+61 more)
Python/instancias/peor-caso-agm/: AGM-10.txt  AGM-100.txt  AGM-101.txt  AGM-102.txt  AGM-11.txt  AGM-12.txt  AGM-13.txt  AGM-14.txt  AGM-15.txt  AGM-16.txt  AGM-17.txt  AGM-18.txt  AGM-19.txt  AGM-20.txt  AGM-21.txt  AGM-22.txt  AGM-23.txt  AGM-24.txt  AGM-25.txt  AGM-26.txt  AGM-27.txt  AGM-28.txt  AGM-29.txt  AGM-3.txt  AGM-30.txt  AGM-31.txt  AGM-32.txt  AGM-33.txt  AGM-34.txt  AGM-35.txt  AGM-36.txt  AGM-37.txt  AGM-38.txt  AGM-39.txt  AGM-4.txt  AGM-40.txt  AGM-41.txt  AGM-42.txt  AGM-43.txt  AGM-44.txt  (+61 more)
Python/instancias/peor-caso-ga/: G-10.txt  G-100.txt  G-101.txt  G-102.txt  G-11.txt  G-12.txt  G-13.txt  G-14.txt  G-15.txt  G-16.txt  G-17.txt  G-18.txt  G-19.txt  G-20.txt  G-21.txt  G-22.txt  G-23.txt  G-24.txt  G-25.txt  G-26.txt  G-27.txt  G-28.txt  G-29.txt  G-3.txt  G-30.txt  G-31.txt  G-32.txt  G-33.txt  G-34.txt  G-35.txt  G-36.txt  G-37.txt  G-38.txt  G-39.txt  G-4.txt  G-40.txt  G-41.txt  G-42.txt  G-43.txt  G-44.txt  (+161 more)
Python/resultados/: resultado.csv  resultado_agm.csv  resultado_agm_peor.csv  resultado_agm_tabu.csv  resultado_euler.csv  resultado_euler_TSP_AGM.csv  resultado_euler_TSP_GA.csv  resultado_euler_TSP_INS.csv  resultado_opts.csv  resultado_opts_TSP_AGM.csv  resultado_opts_TSP_GA.csv  resultado_opts_TSP_INS.csv  resultado_opts_euler_TSP_AGM.csv  resultado_opts_euler_TSP_GA.csv  resultado_opts_euler_TSP_INS.csv  resultado_opts_tabu.csv  resultado_peor_ag.csv  resultado_peor_ag2.csv  resultado_random.csv  resultado_tabu.csv  resultado_tabu_mejor_configuracion_GA.csv  resultado_tabu_mejor_configuracion_agm.csv  resultado_tabu_mejor_configuracion_ins.csv  resultado_tabu_params_finoli_opt.csv  resultado_tabu_params_opt.csv  resultado_tabu_params_random.csv
Tests/: tests.cpp  tests.h
