cmake_minimum_required(VERSION 3.16)
project(algo3_tp2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Python)
include_directories(Tests)

add_executable(algo3_tp2
        Python/instancias/descargas/data/a280.tsp
        Python/instancias/descargas/data/ali535.tsp
        Python/instancias/descargas/data/att48.tsp
        Python/instancias/descargas/data/att532.tsp
        Python/instancias/descargas/data/bayg29.tsp
        Python/instancias/descargas/data/bays29.tsp
        Python/instancias/descargas/data/berlin52.tsp
        Python/instancias/descargas/data/bier127.tsp
        Python/instancias/descargas/data/burma14.tsp
        Python/instancias/descargas/data/ch130.tsp
        Python/instancias/descargas/data/ch150.tsp
        Python/instancias/descargas/data/d1291.tsp
        Python/instancias/descargas/data/d1655.tsp
        Python/instancias/descargas/data/d198.tsp
        Python/instancias/descargas/data/d2103.tsp
        Python/instancias/descargas/data/d493.tsp
        Python/instancias/descargas/data/d657.tsp
        Python/instancias/descargas/data/dantzig42.tsp
        Python/instancias/descargas/data/dsj1000.tsp
        Python/instancias/descargas/data/eil101.tsp
        Python/instancias/descargas/data/eil51.tsp
        Python/instancias/descargas/data/eil76.tsp
        Python/instancias/descargas/data/fl1400.tsp
        Python/instancias/descargas/data/fl1577.tsp
        Python/instancias/descargas/data/fl417.tsp
        Python/instancias/descargas/data/gil262.tsp
        Python/instancias/descargas/data/gr120.tsp
        Python/instancias/descargas/data/gr137.tsp
        Python/instancias/descargas/data/gr202.tsp
        Python/instancias/descargas/data/gr229.tsp
        Python/instancias/descargas/data/gr431.tsp
        Python/instancias/descargas/data/gr666.tsp
        Python/instancias/descargas/data/gr96.tsp
        Python/instancias/descargas/data/kroA100.tsp
        Python/instancias/descargas/data/kroA150.tsp
        Python/instancias/descargas/data/kroA200.tsp
        Python/instancias/descargas/data/kroB100.tsp
        Python/instancias/descargas/data/kroB150.tsp
        Python/instancias/descargas/data/kroB200.tsp
        Python/instancias/descargas/data/kroC100.tsp
        Python/instancias/descargas/data/kroD100.tsp
        Python/instancias/descargas/data/kroE100.tsp
        Python/instancias/descargas/data/lin105.tsp
        Python/instancias/descargas/data/lin318.tsp
        Python/instancias/descargas/data/linhp318.tsp
        Python/instancias/descargas/data/nrw1379.tsp
        Python/instancias/descargas/data/p654.tsp
        Python/instancias/descargas/data/pa561.tsp
        Python/instancias/descargas/data/pcb1173.tsp
        Python/instancias/descargas/data/pcb442.tsp
        Python/instancias/descargas/data/pr1002.tsp
        Python/instancias/descargas/data/pr107.tsp
        Python/instancias/descargas/data/pr124.tsp
        Python/instancias/descargas/data/pr136.tsp
        Python/instancias/descargas/data/pr144.tsp
        Python/instancias/descargas/data/pr152.tsp
        Python/instancias/descargas/data/pr226.tsp
        Python/instancias/descargas/data/pr2392.tsp
        Python/instancias/descargas/data/pr264.tsp
        Python/instancias/descargas/data/pr299.tsp
        Python/instancias/descargas/data/pr439.tsp
        Python/instancias/descargas/data/pr76.tsp
        Python/instancias/descargas/data/rat195.tsp
        Python/instancias/descargas/data/rat575.tsp
        Python/instancias/descargas/data/rat783.tsp
        Python/instancias/descargas/data/rat99.tsp
        Python/instancias/descargas/data/rd100.tsp
        Python/instancias/descargas/data/rd400.tsp
        Python/instancias/descargas/data/rl1304.tsp
        Python/instancias/descargas/data/rl1323.tsp
        Python/instancias/descargas/data/rl1889.tsp
        Python/instancias/descargas/data/st70.tsp
        Python/instancias/descargas/data/ts225.tsp
        Python/instancias/descargas/data/tsp225.tsp
        Python/instancias/descargas/data/u1060.tsp
        Python/instancias/descargas/data/u1432.tsp
        Python/instancias/descargas/data/u159.tsp
        Python/instancias/descargas/data/u1817.tsp
        Python/instancias/descargas/data/u2152.tsp
        Python/instancias/descargas/data/u2319.tsp
        Python/instancias/descargas/data/u574.tsp
        Python/instancias/descargas/data/u724.tsp
        Python/instancias/descargas/data/ulysses16.tsp
        Python/instancias/descargas/data/ulysses22.tsp
        Python/instancias/descargas/data/vm1084.tsp
        Python/instancias/descargas/data/vm1748.tsp
        Python/instancias/descargas/download_data/ceros/brazil58.tsp
        Python/instancias/descargas/download_data/ceros/brg180.opt.tour
        Python/instancias/descargas/download_data/ceros/brg180.tsp
        Python/instancias/descargas/download_data/ceros/fri26.opt.tour
        Python/instancias/descargas/download_data/ceros/fri26.tsp
        Python/instancias/descargas/download_data/ceros/gr17.tsp
        Python/instancias/descargas/download_data/ceros/gr21.tsp
        Python/instancias/descargas/download_data/ceros/gr24.opt.tour
        Python/instancias/descargas/download_data/ceros/gr24.tsp
        Python/instancias/descargas/download_data/ceros/gr48.opt.tour
        Python/instancias/descargas/download_data/ceros/gr48.tsp
        Python/instancias/descargas/download_data/ceros/hk48.tsp
        Python/instancias/descargas/download_data/ceros/si1032.tsp
        Python/instancias/descargas/download_data/ceros/si175.tsp
        Python/instancias/descargas/download_data/ceros/si535.tsp
        Python/instancias/descargas/download_data/ceros/swiss42.tsp
        Python/instancias/descargas/download_data/descartadas/brd14051.tsp
        Python/instancias/descargas/download_data/descartadas/d18512.tsp
        Python/instancias/descargas/download_data/descartadas/pla33810.tsp
        Python/instancias/descargas/download_data/descartadas/pla85900.tsp
        Python/instancias/descargas/download_data/descartadas/rl11849.tsp
        Python/instancias/descargas/download_data/descartadas/usa13509.tsp
        Python/instancias/descargas/download_data/a280.opt.tour
        Python/instancias/descargas/download_data/a280.tsp
        Python/instancias/descargas/download_data/ali535.tsp
        Python/instancias/descargas/download_data/att48.opt.tour
        Python/instancias/descargas/download_data/att48.tsp
        Python/instancias/descargas/download_data/att532.tsp
        Python/instancias/descargas/download_data/bayg29.opt.tour
        Python/instancias/descargas/download_data/bayg29.tsp
        Python/instancias/descargas/download_data/bays29.opt.tour
        Python/instancias/descargas/download_data/bays29.tsp
        Python/instancias/descargas/download_data/berlin52.opt.tour
        Python/instancias/descargas/download_data/berlin52.tsp
        Python/instancias/descargas/download_data/bier127.tsp
        Python/instancias/descargas/download_data/burma14.tsp
        Python/instancias/descargas/download_data/ch130.opt.tour
        Python/instancias/descargas/download_data/ch130.tsp
        Python/instancias/descargas/download_data/ch150.opt.tour
        Python/instancias/descargas/download_data/ch150.tsp
        Python/instancias/descargas/download_data/d1291.tsp
        Python/instancias/descargas/download_data/d1655.tsp
        Python/instancias/descargas/download_data/d198.tsp
        Python/instancias/descargas/download_data/d2103.tsp
        Python/instancias/descargas/download_data/d493.tsp
        Python/instancias/descargas/download_data/d657.tsp
        Python/instancias/descargas/download_data/dantzig42.tsp
        Python/instancias/descargas/download_data/dsj1000.tsp
        Python/instancias/descargas/download_data/eil101.opt.tour
        Python/instancias/descargas/download_data/eil101.tsp
        Python/instancias/descargas/download_data/eil51.opt.tour
        Python/instancias/descargas/download_data/eil51.tsp
        Python/instancias/descargas/download_data/eil76.opt.tour
        Python/instancias/descargas/download_data/eil76.tsp
        Python/instancias/descargas/download_data/fl1400.tsp
        Python/instancias/descargas/download_data/fl1577.tsp
        Python/instancias/descargas/download_data/fl3795.tsp
        Python/instancias/descargas/download_data/fl417.tsp
        Python/instancias/descargas/download_data/fnl4461.tsp
        Python/instancias/descargas/download_data/gil262.tsp
        Python/instancias/descargas/download_data/gr120.opt.tour
        Python/instancias/descargas/download_data/gr120.tsp
        Python/instancias/descargas/download_data/gr137.tsp
        Python/instancias/descargas/download_data/gr202.opt.tour
        Python/instancias/descargas/download_data/gr202.tsp
        Python/instancias/descargas/download_data/gr229.tsp
        Python/instancias/descargas/download_data/gr431.tsp
        Python/instancias/descargas/download_data/gr666.opt.tour
        Python/instancias/descargas/download_data/gr666.tsp
        Python/instancias/descargas/download_data/gr96.opt.tour
        Python/instancias/descargas/download_data/gr96.tsp
        Python/instancias/descargas/download_data/kroA100.opt.tour
        Python/instancias/descargas/download_data/kroA100.tsp
        Python/instancias/descargas/download_data/kroA150.tsp
        Python/instancias/descargas/download_data/kroA200.tsp
        Python/instancias/descargas/download_data/kroB100.tsp
        Python/instancias/descargas/download_data/kroB150.tsp
        Python/instancias/descargas/download_data/kroB200.tsp
        Python/instancias/descargas/download_data/kroC100.opt.tour
        Python/instancias/descargas/download_data/kroC100.tsp
        Python/instancias/descargas/download_data/kroD100.opt.tour
        Python/instancias/descargas/download_data/kroD100.tsp
        Python/instancias/descargas/download_data/kroE100.tsp
        Python/instancias/descargas/download_data/lin105.opt.tour
        Python/instancias/descargas/download_data/lin105.tsp
        Python/instancias/descargas/download_data/lin318.tsp
        Python/instancias/descargas/download_data/linhp318.tsp
        Python/instancias/descargas/download_data/nrw1379.tsp
        Python/instancias/descargas/download_data/p654.tsp
        Python/instancias/descargas/download_data/pa561.opt.tour
        Python/instancias/descargas/download_data/pa561.tsp
        Python/instancias/descargas/download_data/pcb1173.tsp
        Python/instancias/descargas/download_data/pcb3038.tsp
        Python/instancias/descargas/download_data/pcb442.opt.tour
        Python/instancias/descargas/download_data/pcb442.tsp
        Python/instancias/descargas/download_data/pla7397.tsp
        Python/instancias/descargas/download_data/pr1002.opt.tour
        Python/instancias/descargas/download_data/pr1002.tsp
        Python/instancias/descargas/download_data/pr107.tsp
        Python/instancias/descargas/download_data/pr124.tsp
        Python/instancias/descargas/download_data/pr136.tsp
        Python/instancias/descargas/download_data/pr144.tsp
        Python/instancias/descargas/download_data/pr152.tsp
        Python/instancias/descargas/download_data/pr226.tsp
        Python/instancias/descargas/download_data/pr2392.opt.tour
        Python/instancias/descargas/download_data/pr2392.tsp
        Python/instancias/descargas/download_data/pr264.tsp
        Python/instancias/descargas/download_data/pr299.tsp
        Python/instancias/descargas/download_data/pr439.tsp
        Python/instancias/descargas/download_data/pr76.opt.tour
        Python/instancias/descargas/download_data/pr76.tsp
        Python/instancias/descargas/download_data/rat195.tsp
        Python/instancias/descargas/download_data/rat575.tsp
        Python/instancias/descargas/download_data/rat783.tsp
        Python/instancias/descargas/download_data/rat99.tsp
        Python/instancias/descargas/download_data/rd100.opt.tour
        Python/instancias/descargas/download_data/rd100.tsp
        Python/instancias/descargas/download_data/rd400.tsp
        Python/instancias/descargas/download_data/rl1304.tsp
        Python/instancias/descargas/download_data/rl1323.tsp
        Python/instancias/descargas/download_data/rl1889.tsp
        Python/instancias/descargas/download_data/rl5915.tsp
        Python/instancias/descargas/download_data/rl5934.tsp
        Python/instancias/descargas/download_data/st70.opt.tour
        Python/instancias/descargas/download_data/st70.tsp
        Python/instancias/descargas/download_data/ts225.tsp
        Python/instancias/descargas/download_data/tsp225.tsp
        Python/instancias/descargas/download_data/u1060.tsp
        Python/instancias/descargas/download_data/u1432.tsp
        Python/instancias/descargas/download_data/u159.tsp
        Python/instancias/descargas/download_data/u1817.tsp
        Python/instancias/descargas/download_data/u2152.tsp
        Python/instancias/descargas/download_data/u2319.tsp
        Python/instancias/descargas/download_data/u574.tsp
        Python/instancias/descargas/download_data/u724.tsp
        Python/instancias/descargas/download_data/ulysses16.opt.tour
        Python/instancias/descargas/download_data/ulysses16.tsp
        Python/instancias/descargas/download_data/ulysses22.opt.tour
        Python/instancias/descargas/download_data/ulysses22.tsp
        Python/instancias/descargas/download_data/vm1084.tsp
        Python/instancias/descargas/download_data/vm1748.tsp
        Python/instancias/descargas/scripts/descargar_instancias.py
        Python/instancias/descargas/scripts/parser_instancias_con_espejadas_ceros.py
        Python/instancias/descargas/scripts/parser_instancias_con_espejadas_unos.py
        Python/instancias/descargas/scripts/parser_instancias_sin_espejadas_ceros.py
        Python/instancias/descargas/scripts/parser_instancias_sin_espejadas_unos.py
        Python/instancias/descargas/0_descargar_instancias_de_prueba.sh
        Python/instancias/descargas/1_parsear_instancias.sh
        Python/instancias/descargas/indice.csv
        Python/instancias/descargas/pesos_optimos.txt
        Python/instancias/grafo-euleriano/E-10.txt
        Python/instancias/grafo-euleriano/E-100.txt
        Python/instancias/grafo-euleriano/E-101.txt
        Python/instancias/grafo-euleriano/E-102.txt
        Python/instancias/grafo-euleriano/E-11.txt
        Python/instancias/grafo-euleriano/E-12.txt
        Python/instancias/grafo-euleriano/E-13.txt
        Python/instancias/grafo-euleriano/E-14.txt
        Python/instancias/grafo-euleriano/E-15.txt
        Python/instancias/grafo-euleriano/E-16.txt
        Python/instancias/grafo-euleriano/E-17.txt
        Python/instancias/grafo-euleriano/E-18.txt
        Python/instancias/grafo-euleriano/E-19.txt
        Python/instancias/grafo-euleriano/E-20.txt
        Python/instancias/grafo-euleriano/E-21.txt
        Python/instancias/grafo-euleriano/E-22.txt
        Python/instancias/grafo-euleriano/E-23.txt
        Python/instancias/grafo-euleriano/E-24.txt
        Python/instancias/grafo-euleriano/E-25.txt
        Python/instancias/grafo-euleriano/E-26.txt
        Python/instancias/grafo-euleriano/E-27.txt
        Python/instancias/grafo-euleriano/E-28.txt
        Python/instancias/grafo-euleriano/E-29.txt
        Python/instancias/grafo-euleriano/E-3.txt
        Python/instancias/grafo-euleriano/E-30.txt
        Python/instancias/grafo-euleriano/E-31.txt
        Python/instancias/grafo-euleriano/E-32.txt
        Python/instancias/grafo-euleriano/E-33.txt
        Python/instancias/grafo-euleriano/E-34.txt
        Python/instancias/grafo-euleriano/E-35.txt
        Python/instancias/grafo-euleriano/E-36.txt
        Python/instancias/grafo-euleriano/E-37.txt
        Python/instancias/grafo-euleriano/E-38.txt
        Python/instancias/grafo-euleriano/E-39.txt
        Python/instancias/grafo-euleriano/E-4.txt
        Python/instancias/grafo-euleriano/E-40.txt
        Python/instancias/grafo-euleriano/E-41.txt
        Python/instancias/grafo-euleriano/E-42.txt
        Python/instancias/grafo-euleriano/E-43.txt
        Python/instancias/grafo-euleriano/E-44.txt
        Python/instancias/grafo-euleriano/E-45.txt
        Python/instancias/grafo-euleriano/E-46.txt
        Python/instancias/grafo-euleriano/E-47.txt
        Python/instancias/grafo-euleriano/E-48.txt
        Python/instancias/grafo-euleriano/E-49.txt
        Python/instancias/grafo-euleriano/E-5.txt
        Python/instancias/grafo-euleriano/E-50.txt
        Python/instancias/grafo-euleriano/E-51.txt
        Python/instancias/grafo-euleriano/E-52.txt
        Python/instancias/grafo-euleriano/E-53.txt
        Python/instancias/grafo-euleriano/E-54.txt
        Python/instancias/grafo-euleriano/E-55.txt
        Python/instancias/grafo-euleriano/E-56.txt
        Python/instancias/grafo-euleriano/E-57.txt
        Python/instancias/grafo-euleriano/E-58.txt
        Python/instancias/grafo-euleriano/E-59.txt
        Python/instancias/grafo-euleriano/E-6.txt
        Python/instancias/grafo-euleriano/E-60.txt
        Python/instancias/grafo-euleriano/E-61.txt
        Python/instancias/grafo-euleriano/E-62.txt
        Python/instancias/grafo-euleriano/E-63.txt
        Python/instancias/grafo-euleriano/E-64.txt
        Python/instancias/grafo-euleriano/E-65.txt
        Python/instancias/grafo-euleriano/E-66.txt
        Python/instancias/grafo-euleriano/E-67.txt
        Python/instancias/grafo-euleriano/E-68.txt
        Python/instancias/grafo-euleriano/E-69.txt
        Python/instancias/grafo-euleriano/E-7.txt
        Python/instancias/grafo-euleriano/E-70.txt
        Python/instancias/grafo-euleriano/E-71.txt
        Python/instancias/grafo-euleriano/E-72.txt
        Python/instancias/grafo-euleriano/E-73.txt
        Python/instancias/grafo-euleriano/E-74.txt
        Python/instancias/grafo-euleriano/E-75.txt
        Python/instancias/grafo-euleriano/E-76.txt
        Python/instancias/grafo-euleriano/E-77.txt
        Python/instancias/grafo-euleriano/E-78.txt
        Python/instancias/grafo-euleriano/E-79.txt
        Python/instancias/grafo-euleriano/E-8.txt
        Python/instancias/grafo-euleriano/E-80.txt
        Python/instancias/grafo-euleriano/E-81.txt
        Python/instancias/grafo-euleriano/E-82.txt
        Python/instancias/grafo-euleriano/E-83.txt
        Python/instancias/grafo-euleriano/E-84.txt
        Python/instancias/grafo-euleriano/E-85.txt
        Python/instancias/grafo-euleriano/E-86.txt
        Python/instancias/grafo-euleriano/E-87.txt
        Python/instancias/grafo-euleriano/E-88.txt
        Python/instancias/grafo-euleriano/E-89.txt
        Python/instancias/grafo-euleriano/E-9.txt
        Python/instancias/grafo-euleriano/E-90.txt
        Python/instancias/grafo-euleriano/E-91.txt
        Python/instancias/grafo-euleriano/E-92.txt
        Python/instancias/grafo-euleriano/E-93.txt
        Python/instancias/grafo-euleriano/E-94.txt
        Python/instancias/grafo-euleriano/E-95.txt
        Python/instancias/grafo-euleriano/E-96.txt
        Python/instancias/grafo-euleriano/E-97.txt
        Python/instancias/grafo-euleriano/E-98.txt
        Python/instancias/grafo-euleriano/E-99.txt
        Python/instancias/grafo-euleriano/indice.csv
        Python/instancias/grafo-propio/G-10.txt
        Python/instancias/grafo-propio/G-100.txt
        Python/instancias/grafo-propio/G-101.txt
        Python/instancias/grafo-propio/G-102.txt
        Python/instancias/grafo-propio/G-11.txt
        Python/instancias/grafo-propio/G-12.txt
        Python/instancias/grafo-propio/G-13.txt
        Python/instancias/grafo-propio/G-14.txt
        Python/instancias/grafo-propio/G-15.txt
        Python/instancias/grafo-propio/G-16.txt
        Python/instancias/grafo-propio/G-17.txt
        Python/instancias/grafo-propio/G-18.txt
        Python/instancias/grafo-propio/G-19.txt
        Python/instancias/grafo-propio/G-20.txt
        Python/instancias/grafo-propio/G-21.txt
        Python/instancias/grafo-propio/G-22.txt
        Python/instancias/grafo-propio/G-23.txt
        Python/instancias/grafo-propio/G-24.txt
        Python/instancias/grafo-propio/G-25.txt
        Python/instancias/grafo-propio/G-26.txt
        Python/instancias/grafo-propio/G-27.txt
        Python/instancias/grafo-propio/G-28.txt
        Python/instancias/grafo-propio/G-29.txt
        Python/instancias/grafo-propio/G-3.txt
        Python/instancias/grafo-propio/G-30.txt
        Python/instancias/grafo-propio/G-31.txt
        Python/instancias/grafo-propio/G-32.txt
        Python/instancias/grafo-propio/G-33.txt
        Python/instancias/grafo-propio/G-34.txt
        Python/instancias/grafo-propio/G-35.txt
        Python/instancias/grafo-propio/G-36.txt
        Python/instancias/grafo-propio/G-37.txt
        Python/instancias/grafo-propio/G-38.txt
        Python/instancias/grafo-propio/G-39.txt
        Python/instancias/grafo-propio/G-4.txt
        Python/instancias/grafo-propio/G-40.txt
        Python/instancias/grafo-propio/G-41.txt
        Python/instancias/grafo-propio/G-42.txt
        Python/instancias/grafo-propio/G-43.txt
        Python/instancias/grafo-propio/G-44.txt
        Python/instancias/grafo-propio/G-45.txt
        Python/instancias/grafo-propio/G-46.txt
        Python/instancias/grafo-propio/G-47.txt
        Python/instancias/grafo-propio/G-48.txt
        Python/instancias/grafo-propio/G-49.txt
        Python/instancias/grafo-propio/G-5.txt
        Python/instancias/grafo-propio/G-50.txt
        Python/instancias/grafo-propio/G-51.txt
        Python/instancias/grafo-propio/G-52.txt
        Python/instancias/grafo-propio/G-53.txt
        Python/instancias/grafo-propio/G-54.txt
        Python/instancias/grafo-propio/G-55.txt
        Python/instancias/grafo-propio/G-56.txt
        Python/instancias/grafo-propio/G-57.txt
        Python/instancias/grafo-propio/G-58.txt
        Python/instancias/grafo-propio/G-59.txt
        Python/instancias/grafo-propio/G-6.txt
        Python/instancias/grafo-propio/G-60.txt
        Python/instancias/grafo-propio/G-61.txt
        Python/instancias/grafo-propio/G-62.txt
        Python/instancias/grafo-propio/G-63.txt
        Python/instancias/grafo-propio/G-64.txt
        Python/instancias/grafo-propio/G-65.txt
        Python/instancias/grafo-propio/G-66.txt
        Python/instancias/grafo-propio/G-67.txt
        Python/instancias/grafo-propio/G-68.txt
        Python/instancias/grafo-propio/G-69.txt
        Python/instancias/grafo-propio/G-7.txt
        Python/instancias/grafo-propio/G-70.txt
        Python/instancias/grafo-propio/G-71.txt
        Python/instancias/grafo-propio/G-72.txt
        Python/instancias/grafo-propio/G-73.txt
        Python/instancias/grafo-propio/G-74.txt
        Python/instancias/grafo-propio/G-75.txt
        Python/instancias/grafo-propio/G-76.txt
        Python/instancias/grafo-propio/G-77.txt
        Python/instancias/grafo-propio/G-78.txt
        Python/instancias/grafo-propio/G-79.txt
        Python/instancias/grafo-propio/G-8.txt
        Python/instancias/grafo-propio/G-80.txt
        Python/instancias/grafo-propio/G-81.txt
        Python/instancias/grafo-propio/G-82.txt
        Python/instancias/grafo-propio/G-83.txt
        Python/instancias/grafo-propio/G-84.txt
        Python/instancias/grafo-propio/G-85.txt
        Python/instancias/grafo-propio/G-86.txt
        Python/instancias/grafo-propio/G-87.txt
        Python/instancias/grafo-propio/G-88.txt
        Python/instancias/grafo-propio/G-89.txt
        Python/instancias/grafo-propio/G-9.txt
        Python/instancias/grafo-propio/G-90.txt
        Python/instancias/grafo-propio/G-91.txt
        Python/instancias/grafo-propio/G-92.txt
        Python/instancias/grafo-propio/G-93.txt
        Python/instancias/grafo-propio/G-94.txt
        Python/instancias/grafo-propio/G-95.txt
        Python/instancias/grafo-propio/G-96.txt
        Python/instancias/grafo-propio/G-97.txt
        Python/instancias/grafo-propio/G-98.txt
        Python/instancias/grafo-propio/G-99.txt
        Python/instancias/grafo-propio/indice.csv
        Python/instancias/peor-caso-agm/AGM-10.txt
        Python/instancias/peor-caso-agm/AGM-100.txt
        Python/instancias/peor-caso-agm/AGM-101.txt
        Python/instancias/peor-caso-agm/AGM-102.txt
        Python/instancias/peor-caso-agm/AGM-11.txt
        Python/instancias/peor-caso-agm/AGM-12.txt
        Python/instancias/peor-caso-agm/AGM-13.txt
        Python/instancias/peor-caso-agm/AGM-14.txt
        Python/instancias/peor-caso-agm/AGM-15.txt
        Python/instancias/peor-caso-agm/AGM-16.txt
        Python/instancias/peor-caso-agm/AGM-17.txt
        Python/instancias/peor-caso-agm/AGM-18.txt
        Python/instancias/peor-caso-agm/AGM-19.txt
        Python/instancias/peor-caso-agm/AGM-20.txt
        Python/instancias/peor-caso-agm/AGM-21.txt
        Python/instancias/peor-caso-agm/AGM-22.txt
        Python/instancias/peor-caso-agm/AGM-23.txt
        Python/instancias/peor-caso-agm/AGM-24.txt
        Python/instancias/peor-caso-agm/AGM-25.txt
        Python/instancias/peor-caso-agm/AGM-26.txt
        Python/instancias/peor-caso-agm/AGM-27.txt
        Python/instancias/peor-caso-agm/AGM-28.txt
        Python/instancias/peor-caso-agm/AGM-29.txt
        Python/instancias/peor-caso-agm/AGM-3.txt
        Python/instancias/peor-caso-agm/AGM-30.txt
        Python/instancias/peor-caso-agm/AGM-31.txt
        Python/instancias/peor-caso-agm/AGM-32.txt
        Python/instancias/peor-caso-agm/AGM-33.txt
        Python/instancias/peor-caso-agm/AGM-34.txt
        Python/instancias/peor-caso-agm/AGM-35.txt
        Python/instancias/peor-caso-agm/AGM-36.txt
        Python/instancias/peor-caso-agm/AGM-37.txt
        Python/instancias/peor-caso-agm/AGM-38.txt
        Python/instancias/peor-caso-agm/AGM-39.txt
        Python/instancias/peor-caso-agm/AGM-4.txt
        Python/instancias/peor-caso-agm/AGM-40.txt
        Python/instancias/peor-caso-agm/AGM-41.txt
        Python/instancias/peor-caso-agm/AGM-42.txt
        Python/instancias/peor-caso-agm/AGM-43.txt
        Python/instancias/peor-caso-agm/AGM-44.txt
        Python/instancias/peor-caso-agm/AGM-45.txt
        Python/instancias/peor-caso-agm/AGM-46.txt
        Python/instancias/peor-caso-agm/AGM-47.txt
        Python/instancias/peor-caso-agm/AGM-48.txt
        Python/instancias/peor-caso-agm/AGM-49.txt
        Python/instancias/peor-caso-agm/AGM-5.txt
        Python/instancias/peor-caso-agm/AGM-50.txt
        Python/instancias/peor-caso-agm/AGM-51.txt
        Python/instancias/peor-caso-agm/AGM-52.txt
        Python/instancias/peor-caso-agm/AGM-53.txt
        Python/instancias/peor-caso-agm/AGM-54.txt
        Python/instancias/peor-caso-agm/AGM-55.txt
        Python/instancias/peor-caso-agm/AGM-56.txt
        Python/instancias/peor-caso-agm/AGM-57.txt
        Python/instancias/peor-caso-agm/AGM-58.txt
        Python/instancias/peor-caso-agm/AGM-59.txt
        Python/instancias/peor-caso-agm/AGM-6.txt
        Python/instancias/peor-caso-agm/AGM-60.txt
        Python/instancias/peor-caso-agm/AGM-61.txt
        Python/instancias/peor-caso-agm/AGM-62.txt
        Python/instancias/peor-caso-agm/AGM-63.txt
        Python/instancias/peor-caso-agm/AGM-64.txt
        Python/instancias/peor-caso-agm/AGM-65.txt
        Python/instancias/peor-caso-agm/AGM-66.txt
        Python/instancias/peor-caso-agm/AGM-67.txt
        Python/instancias/peor-caso-agm/AGM-68.txt
        Python/instancias/peor-caso-agm/AGM-69.txt
        Python/instancias/peor-caso-agm/AGM-7.txt
        Python/instancias/peor-caso-agm/AGM-70.txt
        Python/instancias/peor-caso-agm/AGM-71.txt
        Python/instancias/peor-caso-agm/AGM-72.txt
        Python/instancias/peor-caso-agm/AGM-73.txt
        Python/instancias/peor-caso-agm/AGM-74.txt
        Python/instancias/peor-caso-agm/AGM-75.txt
        Python/instancias/peor-caso-agm/AGM-76.txt
        Python/instancias/peor-caso-agm/AGM-77.txt
        Python/instancias/peor-caso-agm/AGM-78.txt
        Python/instancias/peor-caso-agm/AGM-79.txt
        Python/instancias/peor-caso-agm/AGM-8.txt
        Python/instancias/peor-caso-agm/AGM-80.txt
        Python/instancias/peor-caso-agm/AGM-81.txt
        Python/instancias/peor-caso-agm/AGM-82.txt
        Python/instancias/peor-caso-agm/AGM-83.txt
        Python/instancias/peor-caso-agm/AGM-84.txt
        Python/instancias/peor-caso-agm/AGM-85.txt
        Python/instancias/peor-caso-agm/AGM-86.txt
        Python/instancias/peor-caso-agm/AGM-87.txt
        Python/instancias/peor-caso-agm/AGM-88.txt
        Python/instancias/peor-caso-agm/AGM-89.txt
        Python/instancias/peor-caso-agm/AGM-9.txt
        Python/instancias/peor-caso-agm/AGM-90.txt
        Python/instancias/peor-caso-agm/AGM-91.txt
        Python/instancias/peor-caso-agm/AGM-92.txt
        Python/instancias/peor-caso-agm/AGM-93.txt
        Python/instancias/peor-caso-agm/AGM-94.txt
        Python/instancias/peor-caso-agm/AGM-95.txt
        Python/instancias/peor-caso-agm/AGM-96.txt
        Python/instancias/peor-caso-agm/AGM-97.txt
        Python/instancias/peor-caso-agm/AGM-98.txt
        Python/instancias/peor-caso-agm/AGM-99.txt
        Python/instancias/peor-caso-agm/indice.csv
        Python/instancias/peor-caso-ga/G-10.txt
        Python/instancias/peor-caso-ga/G-100.txt
        Python/instancias/peor-caso-ga/G-101.txt
        Python/instancias/peor-caso-ga/G-102.txt
        Python/instancias/peor-caso-ga/G-11.txt
        Python/instancias/peor-caso-ga/G-12.txt
        Python/instancias/peor-caso-ga/G-13.txt
        Python/instancias/peor-caso-ga/G-14.txt
        Python/instancias/peor-caso-ga/G-15.txt
        Python/instancias/peor-caso-ga/G-16.txt
        Python/instancias/peor-caso-ga/G-17.txt
        Python/instancias/peor-caso-ga/G-18.txt
        Python/instancias/peor-caso-ga/G-19.txt
        Python/instancias/peor-caso-ga/G-20.txt
        Python/instancias/peor-caso-ga/G-21.txt
        Python/instancias/peor-caso-ga/G-22.txt
        Python/instancias/peor-caso-ga/G-23.txt
        Python/instancias/peor-caso-ga/G-24.txt
        Python/instancias/peor-caso-ga/G-25.txt
        Python/instancias/peor-caso-ga/G-26.txt
        Python/instancias/peor-caso-ga/G-27.txt
        Python/instancias/peor-caso-ga/G-28.txt
        Python/instancias/peor-caso-ga/G-29.txt
        Python/instancias/peor-caso-ga/G-3.txt
        Python/instancias/peor-caso-ga/G-30.txt
        Python/instancias/peor-caso-ga/G-31.txt
        Python/instancias/peor-caso-ga/G-32.txt
        Python/instancias/peor-caso-ga/G-33.txt
        Python/instancias/peor-caso-ga/G-34.txt
        Python/instancias/peor-caso-ga/G-35.txt
        Python/instancias/peor-caso-ga/G-36.txt
        Python/instancias/peor-caso-ga/G-37.txt
        Python/instancias/peor-caso-ga/G-38.txt
        Python/instancias/peor-caso-ga/G-39.txt
        Python/instancias/peor-caso-ga/G-4.txt
        Python/instancias/peor-caso-ga/G-40.txt
        Python/instancias/peor-caso-ga/G-41.txt
        Python/instancias/peor-caso-ga/G-42.txt
        Python/instancias/peor-caso-ga/G-43.txt
        Python/instancias/peor-caso-ga/G-44.txt
        Python/instancias/peor-caso-ga/G-45.txt
        Python/instancias/peor-caso-ga/G-46.txt
        Python/instancias/peor-caso-ga/G-47.txt
        Python/instancias/peor-caso-ga/G-48.txt
        Python/instancias/peor-caso-ga/G-49.txt
        Python/instancias/peor-caso-ga/G-5.txt
        Python/instancias/peor-caso-ga/G-50.txt
        Python/instancias/peor-caso-ga/G-51.txt
        Python/instancias/peor-caso-ga/G-52.txt
        Python/instancias/peor-caso-ga/G-53.txt
        Python/instancias/peor-caso-ga/G-54.txt
        Python/instancias/peor-caso-ga/G-55.txt
        Python/instancias/peor-caso-ga/G-56.txt
        Python/instancias/peor-caso-ga/G-57.txt
        Python/instancias/peor-caso-ga/G-58.txt
        Python/instancias/peor-caso-ga/G-59.txt
        Python/instancias/peor-caso-ga/G-6.txt
        Python/instancias/peor-caso-ga/G-60.txt
        Python/instancias/peor-caso-ga/G-61.txt
        Python/instancias/peor-caso-ga/G-62.txt
        Python/instancias/peor-caso-ga/G-63.txt
        Python/instancias/peor-caso-ga/G-64.txt
        Python/instancias/peor-caso-ga/G-65.txt
        Python/instancias/peor-caso-ga/G-66.txt
        Python/instancias/peor-caso-ga/G-67.txt
        Python/instancias/peor-caso-ga/G-68.txt
        Python/instancias/peor-caso-ga/G-69.txt
        Python/instancias/peor-caso-ga/G-7.txt
        Python/instancias/peor-caso-ga/G-70.txt
        Python/instancias/peor-caso-ga/G-71.txt
        Python/instancias/peor-caso-ga/G-72.txt
        Python/instancias/peor-caso-ga/G-73.txt
        Python/instancias/peor-caso-ga/G-74.txt
        Python/instancias/peor-caso-ga/G-75.txt
        Python/instancias/peor-caso-ga/G-76.txt
        Python/instancias/peor-caso-ga/G-77.txt
        Python/instancias/peor-caso-ga/G-78.txt
        Python/instancias/peor-caso-ga/G-79.txt
        Python/instancias/peor-caso-ga/G-8.txt
        Python/instancias/peor-caso-ga/G-80.txt
        Python/instancias/peor-caso-ga/G-81.txt
        Python/instancias/peor-caso-ga/G-82.txt
        Python/instancias/peor-caso-ga/G-83.txt
        Python/instancias/peor-caso-ga/G-84.txt
        Python/instancias/peor-caso-ga/G-85.txt
        Python/instancias/peor-caso-ga/G-86.txt
        Python/instancias/peor-caso-ga/G-87.txt
        Python/instancias/peor-caso-ga/G-88.txt
        Python/instancias/peor-caso-ga/G-89.txt
        Python/instancias/peor-caso-ga/G-9.txt
        Python/instancias/peor-caso-ga/G-90.txt
        Python/instancias/peor-caso-ga/G-91.txt
        Python/instancias/peor-caso-ga/G-92.txt
        Python/instancias/peor-caso-ga/G-93.txt
        Python/instancias/peor-caso-ga/G-94.txt
        Python/instancias/peor-caso-ga/G-95.txt
        Python/instancias/peor-caso-ga/G-96.txt
        Python/instancias/peor-caso-ga/G-97.txt
        Python/instancias/peor-caso-ga/G-98.txt
        Python/instancias/peor-caso-ga/G-99.txt
        Python/instancias/peor-caso-ga/indice.csv
        Python/resultados/resultado_agm_peor.csv
        Python/resultados/resultado_euler.csv
        Python/resultados/resultado_opts.csv
        Python/resultados/resultado_random.csv
        Python/Analisis.ipynb
        Python/experimentos.ipynb
        Python/generar-instancias.ipynb
        Tests/tests.cpp
        Tests/tests.h
        2opt.cpp
        CMakeLists.txt
        enunciado.pdf
        funciones.h
        GolosoAristas.cpp
        heurAGM.cpp
        Insercion.cpp
        main.cpp
        Makefile
        Makefile.save
        TSP
        unir_find.hpp)
